# azure-ai-travel-agents

./: .gitignore  .repomixignore  AGENTS.md  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_MIGRATION.md  README.md  TravelAgents.sln  VUEPRESS.md  adventure.config.json  azure.yaml  docker-compose.yml  llms.txt  next-steps.md  package-lock.json  package.json  preview.ps1  preview.sh  repomix.config.json  run.ps1  run.sh
.devcontainer/: devcontainer.json
.github/: ai-sec-audit.yml  copilot-instructions.md
.github/codeql/: csharp-config.yml  java-config.yml  python-config.yml  typescript-config.yml
.github/workflows/: ai-opsec-agent.yml  build.yaml  codeql-csharp.yml  codeql-java.yml  codeql-python.yml  codeql-typescript.yml  codeql.yml  deploy-docs.yml
api/: Dockerfile  package-lock.json  package.json  readme.md
api/src/: app.module.ts  main.ts
docs/: DEPLOYMENT_GUIDE_LLAMAINDEX_GITHUB_MODELS.md  README.md  a2a-protocol.md  advanced-setup.md  api-documentation.md  apim-integration.md  architecture-overview.md  deployment-architecture.md  development-guide.md  flow-diagrams.md  getting-started-tutorial.md  getting-started.md  index.md  maf-comparison.md  maf-implementation-guide.md  maf-migration-plan.md  maf-orchestration-design.md  maf-quick-reference.md  maf-visual-guide.md  mcp-servers.md  orchestration-guide.md  orchestration.md  overview.md  package-lock.json  package-naming-guide.md  package.json  technical-architecture.md  workshop-guide.md  workshop-quick-reference.md
docs/.vitepress/: config.mts
docs/.vuepress/: config.js
docs/adventures/: index.md
docs/src/: MAF-README.md  getting-started.md  index.md  maf-implementation-guide.md  maf-orchestration-design.md  maf-quick-reference.md
docs/workshop/: README.md  exercises.md  guide.md  presenter-guide.md
infra/: main.bicep  main.json  main.parameters.json  resources.bicep  resources.json
infra/hooks/: postprovision.ps1  postprovision.sh
infra/modules/: apim.bicep
public/: index.html
public-test/: index.html  quest-1.html  summary.html
public-test/assets/: theme.css
public/ancient/: index.html  quest-1.html  quest-2.html  quest-3.html  quest-4.html  quest-5.html  summary.html
public/developer/: index.html  quest-1.html  quest-2.html  quest-3.html  quest-4.html  quest-5.html  summary.html
public/mythical/: index.html  quest-1.html  quest-2.html  quest-3.html  quest-4.html  (+2 more)
scripts/: deploy-docs.sh  validate-apim.sh
src/: docker-compose.yml
src/api-python/: .env.sample  README.md  pyproject.toml  test.http  test_magentic_simplified.py
src/api-python/src/: config.py  main.py
src/api-python/src/orchestrator/: __init__.py  magentic_workflow.py  workflow.py
src/api-python/src/orchestrator/agents/: __init__.py  base_agent.py  specialized_agents.py  triage_agent.py
src/api-python/src/orchestrator/providers/: __init__.py  azure_openai.py  base.py  docker_models.py  foundry_local.py  github_models.py  ollama_models.py
src/api-python/src/orchestrator/tools/: README.md  __init__.py  examples.py  mcp_client.py  mcp_tool_wrapper.py  tool_config.py  tool_registry.py
src/api-python/src/tests/: test_mcp_client.py  test_workflow.py
ui/: package.json
(+124 files in other folders)
